# isim-rs

./: Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
.github/actions/setup/: action.yml
.github/workflows/: build.yml  release.yml  test.yml
crates/isim/: Cargo.toml
crates/isim/src/: lib.rs
src/: index.cts  load.cts
test/: index.test.cjs
